syntax="proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

package NUgc.NSchema.NFeed;

message TUserMeta {
    string PassportUID = 1;
    string YandexUID = 2;
    string UUID = 3;
    string DeviceId = 4;
    string UserIP = 5;
    string UserAgent = 6;
    string ReqId = 7;
    string ICookie = 8;
    string AppId = 9;
    string YandexTLD = 10;
    string CountryCode = 11;
    string ActivityType = 12;
    string ExpBoxes = 13;
    string SourcePort = 14;
    string Fingerprint = 15;
}

message TApphostServiceMeta {
    string ExternalReqId = 1;
    string Method = 2;
    string Uri = 3;
    string Path = 4;
}

message TUgcdbRequestMeta {
    enum TMethod {
        GET = 0;
        PUT = 1;
        POST = 2;
        PATCH = 3;
        DELETE = 4;
    };
    TMethod Method = 1;
    bool Batch = 2;
    bool Cas = 3;
    bool PublicApi = 4;
    bool ExplicitCreateTime = 5;
    bool ExplicitUpdateTime = 6;
    repeated string Topic = 7;
    uint32 BatchSeqNo = 8;
    bool SkipAggregation = 9; // only for aggregator v2
}

message TRequestMeta {
    TApphostServiceMeta ApphostServiceMeta = 1;
    TUserMeta UserMeta = 2;
    TUgcdbRequestMeta UgcdbRequestMeta = 3;
}

message TRecordMeta {
    google.protobuf.Timestamp CreateTime = 1;
    google.protobuf.Timestamp UpdateTime = 2;
    uint32 Status = 3;
    uint64 Tablet = 4;
    uint64 UpdateEpoch = 5;
    uint64 UpdateNo = 6;
}

message TFeedRecord {
    string Key = 1;
    TRecordMeta OldMeta = 2;
    google.protobuf.Any OldValue = 3;
    TRecordMeta NewMeta = 4;
    google.protobuf.Any NewValue = 5;
    TRequestMeta RequestMeta = 6;
}
